modify for jdk 11